# rv1106-aov-ipc

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-rv1106.cmake
config/: default_config.json
docs/: 01-architecture.md  02-dev-process.md  03-todolist.md  04-worklog.md  05-api.md  06-todolist-ui.md  env.md
docs/design/: m3-detect.md  t03-common.md  t11-media-vi.md  t12-dual-venc.md  t13-m2.md  t43-preview.md  t44-network.md  ui-vigi-gap.md
scripts/: S99ipc_app  analyze_yuv.py  analyze_yuv2.py  build.sh  build_media_sample.sh  build_rkmpi_sample.sh  convert_capture.sh  deploy.ps1  deploy_sample.sh  dump_preview_fmp4.py  find_media_paths.sh  inspect_samples.sh  install_init.sh  ipc_watchdog.sh  lib_login.sh  make_ok_jpg.sh  pack_www.sh  recover_web.sh  repro_preview_crash.py  restart_web.sh  setup_t01.sh  soak_monitor.sh  test_alarm.sh  test_auth.sh  test_m4.sh  test_network.sh  test_preview.sh  test_preview_ws.py  test_storage.sh  test_system.sh  test_time.sh  test_video.sh  test_watchdog.sh  verify_streams.sh  yuv_to_png.py
src/common/: event_bus.c  event_bus.h  jpeg_writer.c  jpeg_writer.h  log.c  log.h  sha256.c  sha256.h
src/detect/: detect_service.c  detect_service.h
src/main/: main.c
src/media/: media_service.c  media_service.h
src/record/: record_service.c  record_service.h
src/system/: config_service.c  config_service.h  network_service.c  network_service.h  storage_service.c  storage_service.h  system_service.c  system_service.h
src/web/: fmp4_mux.c  fmp4_mux.h  web_service.c  web_service.h
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.vue  api.ts  components.d.ts  main.ts  router.ts  styles.css
web-ui/src/layouts/: AppLayout.vue
web-ui/src/views/: AlarmView.vue  LoginView.vue  NetworkView.vue  PasswordView.vue  PlaceholderView.vue  PreviewView.vue  ShellView.vue  StorageView.vue  SystemView.vue  VideoView.vue
web-ui/src/views/info/: DeviceInfoView.vue  SystemLogView.vue
www/: index.html
www/assets/: index-4ABcXnTK.css  index-CiV3hkOW.css  index-DCNSSzP5.js  index-bpcEpYXB.js  index-hY_RT9ry.js  index-r7bVvVrA.css
